--- a/HTMLPages/Index.html
+++ b/HTMLPages/Index.html
@@ -7,10 +7,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        </main>
+        <main>
         <article>  
-            <h1>Beet and Quinoa Salad with Halloumi<h2>
-                <img src="resources/beets.jpg" alt="Beet Root Picture">
+            <h1>Beet and Quinoa Salad with Halloumi<h1>
+            <img src="resources/beets.jpg" alt="Image of chopped Beet Roots" class="borderimage">
             <p>This healthy vegetarian recipe combines brightly coloured beets, quinoa and halloumi.</p>
             <h2>Ingredients</h2>
             <ul>
@@ -28,33 +28,33 @@
             <h2>Steps</h2>
             
             <ol>
-            <li><h2>Step 1</h2>
+            <li><h3>Step 1</h3>
             <p>eel and chop the beetroot into 2cm dice. Chop the onion into 8 wedges and separate. Place into a baking tray. Shred the kale and keep aside.</p>
         </li>
             <li>
-                <h2>
+                <h3>
                         Step 2
-                </h2>
+                </h3>
                 <p>
                         Add a spoonful of olive oil and some salt and pepper to the baking tray and mix well. Put the tray in the heated oven and roast for 35 minutes. Turn the veg halfway through.
             </p>
             </li>
             
             <li>
-            <h2>Step 3</h2>
+            <h3>Step 3</h3>
             <p>While the veg is roasting rinse the quinoa, put it in a pan with a lid. Make up the stock cube with 400ml boiling water and pour this over the quinoa. Put the lid on the pan and bring it back to the boil. Cook for 15 minutes until the water is absorbed. Turn off the heat and leave the pan with the lid on.</p>
             </li>
             <li>
-            <h2>Step 4</h2>
+            <h3>Step 4</h3>
             <p>After the veg has roasted for 35 minutes take the tray from the oven, mix in the kale and put it back in for 10 minutes.</p>
             </li>
             <li>
-            <h2>Step 5</h2>
+            <h3>Step 5</h3>
             <p>Slice the halloumi into slices. Heat a frying pan and lightly spray with oil. Once hot fry the halloumi until brown on each side.
             </p>
         </li>
         <li>
-            <h2>Step 6</h2>
+            <h3>Step 6</h3>
             <p>Take the tray from the oven. Tipe the quinoa in and mix everything together. Then serve in bowls with slices of halloumi on top.</p>
         </li>
   
@@ -69,6 +69,6 @@
             <li><a href="https://www.bbcgoodfood.com/">BBC Good Food</a></li>  
             </ul>
         </aside>
-        <main>
+    </main>
     </body>
 </html>
